[metadata]
name = comb-testing-agragland
version = 0.0.1
author = Andrew Ragland
author_email = agragland00@gmail.com
description = A package for creating combinatorial test suites
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agragland/comb-test-library
project_urls =
    Bug Tracker = https://github.com/agragland/comb-test-library/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src